pssim-api/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc-pssim-api
  labels:
    app: nginx-ingress-pssim-api
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: nginx-ingress-pssim-api
  externalIPs:
  - 10.201.2.18
