pssim-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pssim-api-ingress
spec:
  tls:
  - hosts:
    - pssim-api.minvu.cl
    secretName: pssim-api-secret
  rules:
  - host: pssim-api.minvu.cl
    http:
      paths:
      - path: /api/
        backend:
          serviceName: pssim-api
          servicePort: 80
